[project]
name = "chatdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "huggingface-hub[hf-xet]>=1.5.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.10",
    "langchain-openrouter>=0.0.2",
    "langgraph>=1.0.10",
    "langgraph-cli[inmem]>=0.4.14",
    "langsmith>=0.7.10",
    "pandas>=3.0.1",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "sqlparse>=0.5.5",
    "uvicorn[standard]>=0.41.0",
]
