[project]
name = "chatdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioodbc>=0.5.0",
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "huggingface-hub[hf-xet]>=1.6.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langgraph-cli[inmem]>=0.4.14",
    "langsmith>=0.7.14",
    "pandas>=3.0.1",
    "psycopg[binary,pool]>=3.3.3",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "sqlparse>=0.5.5",
    "uvicorn[standard]>=0.41.0",
]
